[package]
name = "construct_vault_sol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.3"
solana-program = "2.1.6"
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }


[dev-dependencies]
solana-program-test = "2.1.6"
solana-sdk = "2.1.6"
spl-associated-token-account = "6.0.0"
tokio = "1.42.0"
